--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
+    "@angular/animations": "^17.3.12",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -23,9 +23,17 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.10",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "bootstrap": "^5.3.6",
+    "emoji-picker-element": "^1.26.3",
     "express": "^4.18.2",
+    "laravel-echo": "^2.1.4",
+    "ngx-quill": "^27.1.2",
+    "ngx-toastr": "^19.0.0",
+    "quill": "^2.0.3",
+    "quill-emoji": "^0.2.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
