--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "laravel-echo": "^2.1.4",
     "ngx-quill": "^27.1.2",
     "ngx-toastr": "^19.0.0",
+    "pusher-js": "^8.4.0",
     "quill": "^2.0.3",
     "quill-emoji": "^0.2.0",
     "rxjs": "~7.8.0",
